--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Install ESLint
         run: |
           npm install eslint@8.15.0
+          npm init @eslint/config
 
       - name: Run ESLint
         run: npx eslint .
