--- a/package.json
+++ b/package.json
@@ -5,5 +5,22 @@
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0"
-  }
+  },
+  "name": "k6-otus",
+  "version": "1.0.0",
+  "description": "",
+  "main": "sample.js",
+  "scripts": {
+    "test": "k6 run sample.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/otus-load/k6-sampler.git"
+  },
+  "author": "Maksimall89",
+  "license": "Apache",
+  "bugs": {
+    "url": "https://github.com/otus-load/k6-sampler"
+  },
+  "homepage": "https://github.com/otus-load/k6-sampler#readme"
 }
